@@ -1,11 +1,10 @@
 package middle_level;
 
-import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Deque;
 import java.util.List;
 
 /**
+ * 《玩转算法面试视频例题》 树形问题 回溯算法 组合问题
  * 77. 组合
  * 给定两个整数 n 和 k，返回 1 ... n 中所有可能的 k 个数的组合。
  *
@@ -27,32 +26,29 @@ import java.util.List;
  * @date 2020/9/8 9:29 上午
  */
 public class Combine {
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> list = new ArrayList<>();
+
     public List<List<Integer>> combine(int n, int k) {
-        List<List<Integer>> res = new ArrayList<>();
-        if (k <= 0 || n < k) {
-            return res;
-        }
         // 从 1 开始是题目的设定
-        Deque<Integer> path = new ArrayDeque<>();
-        dfs(n, k, 1, path, res);
+        backtrack(n, k, 1);
         return res;
     }
 
-    private void dfs(int n, int k, int begin, Deque<Integer> path, List<List<Integer>> res) {
-        // 递归终止条件是：path 的长度等于 k
-        if (path.size() == k) {
-            res.add(new ArrayList<>(path));
+    private void backtrack(int n, int k, int index) {
+        // 选完了
+        if (list.size() == k) {
+            res.add(new ArrayList<>(list));
             return;
         }
-
-        // 遍历可能的搜索起点
-        for (int i = begin; i <= n; i++) {
-            // 向路径变量里添加一个数
-            path.addLast(i);
+        // 因为是组合问题 每次从上次选完之后的位置开始遍历即可
+        // ！！！！ 剪枝    原来 i <= n， 可以进行剪枝，因为后边的分支已经取不到剩下的那么多元素了
+        // 还有k - list.size()个空位 所以i <= n - (k - list.size()) + 1
+        for (int i = index; i <= n - (k - list.size()) + 1; i++) {
+            list.add(i);
             // 下一轮搜索，设置的搜索起点要加 1，因为组合数理不允许出现重复的元素
-            dfs(n, k, i + 1, path, res);
-            // 重点理解这里：深度优先遍历有回头的过程，因此递归之前做了什么，递归之后需要做相同操作的逆向操作
-            path.removeLast();
+            backtrack(n, k, i + 1);
+            list.remove(list.size() - 1);
         }
     }
 }
